syntax = "proto3";

package httptest;

import "google/api/annotations.proto";

service HTTPPermutations {
  rpc GetWithQuery (GetWithQueryRequest) returns (GetWithQueryResponse) {
    option (google.api.http) = {
      get: "/getwithquery"
    };
  }
  rpc GetWithRepeatedQuery (GetWithRepeatedQueryRequest) returns (GetWithRepeatedQueryResponse) {
    option (google.api.http) = {
      get: "/getwithrepeatedquery"
    };
  }
  rpc PostWithNestedMessageBody (PostWithNestedMessageBodyRequest) returns (PostWithNestedMessageBodyResponse) {
    option (google.api.http) = {
      post: "/postwithnestedmessagebody"
      body: "*"
    };
  }
  rpc CtxToCtxViaHTTPHeader (HeaderRequest) returns (HeaderResponse){
    option (google.api.http) = {
      post: "/ctxtoctx"
      body: "*"
    };
  }
}

message GetWithQueryRequest {
  int64 A = 1;
  int64 B = 2;
}

message GetWithQueryResponse {
  int64 V = 1;
}

message GetWithRepeatedQueryRequest {
  repeated int64 A = 1;
}

message GetWithRepeatedQueryResponse {
  int64 V = 1;
}

message PostWithNestedMessageBodyRequest {
  NestedMessage NM = 1;
}

message NestedMessage {
  int64 A = 1;
  int64 B = 2;
}

message PostWithNestedMessageBodyResponse {
  int64 V = 1;
}

message HeaderRequest{
  string HeaderKey = 1;
}

message HeaderResponse {
  string V = 1;
}
